--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@aws-sdk/client-s3": "^3.51.0"
   },
   "devDependencies": {
+    "nodemon": "^2.0.15",
     "path-browserify": "^1.0.1",
     "webpack": "^5.69.1",
     "webpack-cli": "^4.9.2"
